objects/L2I_ASA__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Activate</fullName>
                </value>
                <value>
                    <fullName>Deactivate</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>No Action</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activation_Date__c</fullName>
        <formula>Aircraft_Service__r.L2I_Activation_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Aircraft_Order__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Aircraft Service Actions</relationshipLabel>
        <relationshipName>Aircraft_Service_Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Aircraft_Service_Status__c</fullName>
        <formula>TEXT( Aircraft_Service__r.Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aircraft Service Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aircraft_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Aircraft Service</label>
        <referenceTo>L2I_Aircraft_Service__c</referenceTo>
        <relationshipLabel>Aircraft Service Actions</relationshipLabel>
        <relationshipName>Aircraft_Service_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancel_Date__c</fullName>
        <formula>Aircraft_Service__r.Cancel_Date__c</formula>
        <label>Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deactivation_Date__c</fullName>
        <formula>Aircraft_Service__r.L2I_Deactivation_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deactivation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Matching_Id__c</fullName>
        <formula>Aircraft_Service__r.Matching_Id__c</formula>
        <label>Matching Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration External Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Aircraft Service Actions</relationshipLabel>
        <relationshipName>Aircraft_Service_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>Aircraft_Service__r.Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Aircraft Service Action</label>
    <nameField>
        <label>Aircraft Service Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aircraft Service Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>